--- a/src/common/show-more/style.css
+++ b/src/common/show-more/style.css
@@ -1,10 +1,25 @@
 
-.show-more-less-clickable {
-    color: rgb(32, 155, 255);
-    cursor: pointer;
+.show-more-container {
+    position: relative;
 }
 
+.show-more-less-clickable {
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 4px 8px;
+    font-size: inherit;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
 
 .show-more-less-clickable:hover {
+    color: #40a9ff;
     text-decoration: underline;
+}
+
+.show-more-less-clickable:focus {
+    outline: 2px solid #1890ff;
+    outline-offset: 2px;
+    border-radius: 2px;
 }
