--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -1,3 +1,5 @@
+@import 'react-quill/dist/quill.snow.css';
+
 /* Dark mode styles */
 .dark .ql-toolbar.ql-snow {
   @apply border border-[#424242];
